--- a/source/jade/analytics.jade
+++ b/source/jade/analytics.jade
@@ -59,6 +59,20 @@ block append content
 					.comments
 						a(href="#") 51
 					.views 2726
+					.irating.irating_fl
+						ul
+							li.star
+							li.star
+							li.star
+							li
+							li
+				.tags.mar-bot-20
+					a(href="#").tags-item.js-open-coming-soon
+						span.name Машиностроение
+						span.count.empty
+					a(href="#").tags-item.js-open-coming-soon
+						span.name Металлообработка
+						span.count 388
 				.bname
 					h1 Состояние науки в Российской Федерации
 				.bcon.bcon-text-style.js-content.fz-default.lh-default
