--- a/source/jade/articles.jade
+++ b/source/jade/articles.jade
@@ -29,19 +29,45 @@ block append content
 			p Аналитические статьи на тему строительства промышленных и иных объектов
 		//------------------------------------------------
 		.main-left
+			.search-con
+				form(action="#")
+					input(type="text", placeholder="Быстрый поиск по аналитическим статьям").inp-text
+					input(type="submit", value="").inp-submit
 			.box-articles
+				.heading
+					.heading-left_sort Сортировать по:						
+					.heading-right_sort
+						a(href="#")
+							| Пользовательскому рейтингу 
+							span
+						a(href="#") 
+							| Названию организации
+							span 
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
 					.icon
+						.idate 10 сентября 2014
 						.iname
 							a(href="#") Состояние науки российской федерации
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
+						.irating.mar-bot-10.irating_margin2
+							ul
+								li.star
+								li.star
+								li.star
+								li
+								li
+						.itext.lh-small
+							p Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.
+						.imeta-info
+							.tags.col-2
+								a(href="#").tags-item
+									span.name Выставки
+									span.count 12
+								a(href="#").tags-item
+									span.name Машиностроение
+									span.count.empty
+							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
 								.views
@@ -50,14 +76,30 @@ block append content
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
 					.icon
+						.idate 10 сентября 2014
 						.iname
-							a(href="#") Модернизация КРУ и КСО
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
+							a(href="#") Состояние науки российской федерации
+						.irating.mar-bot-10.irating_margin2
+							ul
+								li.star
+								li.star
+								li.star
+								li
+								li
+						.itext.lh-small
+							p Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.
+						.imeta-info
+							.tags.col-2
+								a(href="#").tags-item
+									span.name Выставки
+									span.count 12
+								a(href="#").tags-item
+									span.name Машиностроение
+									span.count.empty
+								a(href="#").tags-item
+									span.name Интересный длинный тег
+									span.count.empty
+							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
 								.views
@@ -66,30 +108,27 @@ block append content
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
 					.icon
+						.idate 10 сентября 2014
 						.iname
 							a(href="#") Состояние науки российской федерации
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
-								.comments
-									a(href="#") 51
-								.views
-									a(href="#") 225
-				.item
-					.iprev
-						img(src="img/content/180-135-1.jpg", alt="")
-					.icon
-						.iname
-							a(href="#") Состояние науки российской федерации
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
+						.irating.mar-bot-10.irating_margin2
+							ul
+								li.star
+								li.star
+								li.star
+								li
+								li
+						.itext.lh-small
+							p Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.
+						.imeta-info
+							.tags.col-2
+								a(href="#").tags-item
+									span.name Выставки
+									span.count 12
+								a(href="#").tags-item
+									span.name Машиностроение
+									span.count.empty
+							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
 								.views
@@ -98,14 +137,30 @@ block append content
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
 					.icon
+						.idate 10 сентября 2014
 						.iname
-							a(href="#") Модернизация КРУ и КСО
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
+							a(href="#") Состояние науки российской федерации
+						.irating.mar-bot-10.irating_margin2
+							ul
+								li.star
+								li.star
+								li.star
+								li
+								li
+						.itext.lh-small
+							p Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.
+						.imeta-info
+							.tags.col-2
+								a(href="#").tags-item
+									span.name Выставки
+									span.count 12
+								a(href="#").tags-item
+									span.name Машиностроение
+									span.count.empty
+								a(href="#").tags-item
+									span.name Интересный длинный тег
+									span.count.empty
+							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
 								.views
@@ -114,30 +169,27 @@ block append content
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
 					.icon
+						.idate 10 сентября 2014
 						.iname
 							a(href="#") Состояние науки российской федерации
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
-								.comments
-									a(href="#") 51
-								.views
-									a(href="#") 225
-				.item
-					.iprev
-						img(src="img/content/180-135-1.jpg", alt="")
-					.icon
-						.iname
-							a(href="#") Состояние науки российской федерации
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
+						.irating.mar-bot-10.irating_margin2
+							ul
+								li.star
+								li.star
+								li.star
+								li
+								li
+						.itext.lh-small
+							p Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.
+						.imeta-info
+							.tags.col-2
+								a(href="#").tags-item
+									span.name Выставки
+									span.count 12
+								a(href="#").tags-item
+									span.name Машиностроение
+									span.count.empty
+							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
 								.views
@@ -146,30 +198,30 @@ block append content
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
 					.icon
-						.iname
-							a(href="#") Модернизация КРУ и КСО
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
-								.comments
-									a(href="#") 51
-								.views
-									a(href="#") 225
-				.item
-					.iprev
-						img(src="img/content/180-135-1.jpg", alt="")
-					.icon
+						.idate 10 сентября 2014
 						.iname
 							a(href="#") Состояние науки российской федерации
-						.itext Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России. Основные активы «Инфра» получила от компании, возможно связанной с бывшим министром связи, а основные заказы — от госхолдинга, в котором работали приятели
-						.imore 
-							a(href="#") Читать полностью
-						.imeta
-							.date 10 сентября 2014
-							.right
+						.irating.mar-bot-10.irating_margin2
+							ul
+								li.star
+								li.star
+								li.star
+								li
+								li
+						.itext.lh-small
+							p Взлет строителя сетей связи «Инфра инжиниринг» хорошо показывает, что такое история успеха в России.
+						.imeta-info
+							.tags.col-2
+								a(href="#").tags-item
+									span.name Выставки
+									span.count 12
+								a(href="#").tags-item
+									span.name Машиностроение
+									span.count.empty
+								a(href="#").tags-item
+									span.name Интересный длинный тег
+									span.count.empty
+							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
 								.views
