--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -478,7 +478,9 @@ color-orange()
 	margin-bottom 10px
 	&:last-child
 		margin-bottom 0
-		
+.mar-left-30
+	margin-left 30px
+	
 .imeta
 	clearfix(); 
 	a.btn-add
@@ -580,6 +582,9 @@ color-orange()
 	margin-bottom 10px
 	ul
 		margin 0
+.irating_fl
+	float left
+	padding-left 30px
 
 .photo-desc-box
 	clearfix()
@@ -2001,6 +2006,8 @@ a.link-orange
 			.text
 				padding 10px 0;
 				color #333; font-size 14px;
+			.subtext
+				padding-bottom 20px
 .box-doc-item
 	padding 20px;
 	border 1px solid #E5E5E5;
@@ -2134,6 +2141,16 @@ a.link-orange
 				.right
 					float right;
 					@extend .imeta
+			.imeta-info
+				display table
+				width 100% 
+				.col-2
+					display table-cell 
+					vertical-align top
+				.imeta
+					padding-top 10px
+				.col-fix
+					width 100px
 .box-interest
 	margin 0 -21px 0px -21px;
 	background #fafafa
