--- a/source/jade/docs-item.jade
+++ b/source/jade/docs-item.jade
@@ -28,10 +28,22 @@ block append content
 					.date 19 сентября 2014 года
 					.views 2726
 				.bname
-					h1 Свидетельство о государственной регистрации программы для ЭВМ
+					h1 Свидетельство о государственной  <br>регистрации программы для ЭВМ
 					p № 2013610190 от 09.01.2013
+				p Динамическое уравнение Эйлера, согласно третьему закону Ньютона, <br>изменяет слабоминерализованный бентос. 
+				.tags.mar-bot-20
+					a(href="#").tags-item.js-open-coming-soon
+						span.name Машиностроение
+						span.count.empty
+					a(href="#").tags-item.js-open-coming-soon
+						span.name Металлообработка
+						span.count 388
+				.mar-bot-30
+					a(href="#").btn-orange-wide.inline Скачать
 				.bcon.bcon-text-style
 					img(src="img/content/patent.jpg", alt="")
+				.mar-bot-3hgh0
+					a(href="#").btn-orange-wide.inline Скачать
 		//------------------------------------------------
 		.main-right
 			.box-simular-docs.box-right
