--- a/source/jade/docs.jade
+++ b/source/jade/docs.jade
@@ -38,6 +38,13 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 12
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count.empty
 				.item
 					.file-list
 						a(href="#") JPG - 7 Мб
@@ -46,6 +53,13 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 12
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count.empty
 				.item
 					.file-list
 						a(href="#") JPG - 7 Мб
@@ -54,6 +68,13 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 12
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count.empty
 				.item
 					.file-list
 						a(href="#") JPG - 7 Мб
@@ -62,6 +83,7 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						
 				.item
 					.file-list
 						a(href="#") JPG - 7 Мб
@@ -70,6 +92,13 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 12
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count.empty
 				.item
 					.file-list
 						a(href="#") JPG - 7 Мб
@@ -78,6 +107,13 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 12
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count.empty
 				.item
 					.file-list
 						a(href="#") JPG - 7 Мб
@@ -86,6 +122,13 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 12
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count.empty
 				.item
 					.file-list
 						a(href="#") JPG - 7 Мб
@@ -94,6 +137,13 @@ block append content
 						.date Добавлен: 13 октября 2012
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
+						.tags
+							a(href="#").tags-item
+								span.name Выставки
+								span.count 12
+							a(href="#").tags-item
+								span.name Машиностроение
+								span.count.empty
 		//------------------------------------------------
 		.main-right
 			.box-sort-docs.box-right
