--- a/source/jade/reports.jade
+++ b/source/jade/reports.jade
@@ -129,7 +129,7 @@ block append content
 			.box-info
 				.box
 					.bname
-						h3 Оборудование
+						h3 Конструктор отчетов
 					.bcon.bcon-mod
 						table.table-ind
 							thead
@@ -192,7 +192,7 @@ block append content
 		.main-right
 			.boxside-docs.box-right
 				.bname
-					h3 Документы
+					h3 Отчеты
 				.bcon
 					.item
 						.iname
@@ -209,9 +209,7 @@ block append content
 				.badd
 					a(href="#") Добавить документ
 				.ball
-					a(href="#") Все документы
+					a(href="#") Все отчеты
 			.boxside-btns
-				.btn-reports.btn-warning
-					a(href="#") Экспортировать
-				.btn-reports.btn-primary
-					a(href="#") Распечатать
+				.btn-reports
+					a(href="#").btn-orange-big Построить отчет
