--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -1723,7 +1723,7 @@ a.link-orange
 		padding 0 0 20px 20px;
 		a
 			display block; 
-			padding 10px 40px;
+			padding 10px 20px 10px 40px;
 			font-size 14px; tdn();
 			color #f85800; 
 			background url("../img/icons/document-add.png") 0 center no-repeat; 
