--- a/source/jade/requirements-comment.jade
+++ b/source/jade/requirements-comment.jade
@@ -72,8 +72,14 @@ block append content
 								a(href="#").doc-link math.pdf 
 									span (14 mb)`
 				.bmetabot.right
-					.addd
-						a(href="#").btn-orange-big Предложить решение
+					.order-service-cont_fl
+						a(href="#").btn-grey-dashed-big.inline.js-show-contacts Показать контакты
+						.contacts.js-contacts-box
+							.contacts-in
+								span.phone +7 495 675 87 98
+								span.email
+									a(href="#") email@email.com
+						a(href="#").btn-orange-big.inline Заказать услугу
 					.share.small
 						span Поделиться
 						ul
