--- a/source/jade/requirements.jade
+++ b/source/jade/requirements.jade
@@ -29,6 +29,10 @@ block append content
 			p Рынок предложений и услуг
 		//------------------------------------------------
 		.main-left
+			.search-con
+				form(action="#")
+					input(type="text", placeholder="Быстрый поиск по потребностям").inp-text
+					input(type="submit", value="").inp-submit
 			//------------------------------------------------
 			.tabs-box
 				ul.tabs.js-tabs
