--- a/site/css/style.css
+++ b/site/css/style.css
@@ -822,7 +822,8 @@ i {
 .btn-reports {
   margin-bottom: 10px;
 }
-.btn-grey-dashed {
+.btn-grey-dashed,
+.btn-grey-dashed-big {
   display: inline-block;
   padding: 10px 10px;
   text-align: center;
@@ -833,12 +834,18 @@ i {
   text-transform: uppercase;
   border: 3px dashed #ccc;
 }
-.btn-grey-dashed:hover {
+.btn-grey-dashed:hover,
+.btn-grey-dashed-big:hover {
   text-decoration: none;
   border-color: #999;
 }
-.btn-grey-dashed:active {
+.btn-grey-dashed:active,
+.btn-grey-dashed-big:active {
   background-color: #ccc;
+}
+.btn-grey-dashed-big {
+  padding: 15px 35px;
+  font-size: 15px;
 }
 .btn-grey {
   display: inline-block;
@@ -1248,32 +1255,38 @@ i {
   color: #f85800;
 }
 .event-organizers .contacts,
-.order-service-cont .contacts {
+.order-service-cont .contacts,
+.order-service-cont_fl .contacts {
   padding-top: 20px;
   padding-bottom: 30px;
   color: #999;
 }
 .event-organizers .contacts span,
-.order-service-cont .contacts span {
+.order-service-cont .contacts span,
+.order-service-cont_fl .contacts span {
   padding-top: 4px;
   padding-left: 30px;
   padding-right: 40px;
 }
 .event-organizers .contacts span.phone,
-.order-service-cont .contacts span.phone {
+.order-service-cont .contacts span.phone,
+.order-service-cont_fl .contacts span.phone {
   background: url("../img/icons/phone.png") no-repeat;
 }
 .event-organizers .contacts span.email,
-.order-service-cont .contacts span.email {
+.order-service-cont .contacts span.email,
+.order-service-cont_fl .contacts span.email {
   background: url("../img/icons/email.png") 2px 4px no-repeat;
 }
 .event-organizers .contacts a,
-.order-service-cont .contacts a {
+.order-service-cont .contacts a,
+.order-service-cont_fl .contacts a {
   color: #999;
   text-decoration: none;
 }
 .event-organizers .contacts a:hover,
-.order-service-cont .contacts a:hover {
+.order-service-cont .contacts a:hover,
+.order-service-cont_fl .contacts a:hover {
   color: #f85800;
 }
 .main-full {
@@ -1720,26 +1733,54 @@ img.full {
 .order-service a {
   padding: 10px 25px;
 }
-.order-service-cont {
+.order-service-cont,
+.order-service-cont_fl {
   padding: 20px 0;
 }
 .order-service-cont:before,
-.order-service-cont:after {
+.order-service-cont_fl:before,
+.order-service-cont:after,
+.order-service-cont_fl:after {
   content: "";
   display: table;
   clear: both;
 }
-.order-service-cont > a {
+.order-service-cont > a,
+.order-service-cont_fl > a {
   float: left;
   padding: 10px 40px;
 }
-.order-service-cont .contacts {
+.order-service-cont .contacts,
+.order-service-cont_fl .contacts {
   display: none;
   float: left;
   padding: 0px 0 0 20px;
 }
-.order-service-cont .contacts span {
+.order-service-cont .contacts span,
+.order-service-cont_fl .contacts span {
   display: block;
+}
+.order-service-cont_fl {
+  float: right;
+  margin-right: -20px;
+}
+.order-service-cont_fl .btn-grey-dashed-big {
+  width: 260px;
+  box-sizing: border-box;
+}
+.order-service-cont_fl .contacts {
+  width: 260px;
+  display: none;
+  float: left;
+  padding: 5px 0 0 20px;
+  text-align: center;
+}
+.order-service-cont_fl .contacts span {
+  display: block;
+}
+.order-service-cont_fl .contacts .contacts-in {
+  display: inline-block;
+  text-align: right;
 }
 .reg-black {
   font-weight: 400;
