--- a/source/styl/common.styl
+++ b/source/styl/common.styl
@@ -207,9 +207,9 @@ textarea
 	border 1px solid #e1e1e1
 	anim();
 	&:hover
-		//border-color #ff8c4d;
+		box-shadow 1px 1px 5px rgba(204, 204, 204, 0.75) inset
 	&:focus
-		//border-color #ff8c4d;
+		box-shadow 1px 1px 5px rgba(204, 204, 204, 0.75) inset
 	&.error
 		border-color #ff0000;
 	&.valid
